cpu-request-limit-constraint-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredcpurequest
rego: |
  package k8srequiredcpurequest

  violation[{"msg": msg}] {
    input.request.object.apiVersion == "apps/v1"
    input.request.object.kind == "Deployment"

    cpuRequest := input.request.object.spec.template.spec.containers[_].resources.requests.cpu

    cpuRequest != null
    cpuRequest > "800m"

    msg := "CPU request must be less than or equal to 800m"
  }
